Fixed the conflict positions. Fixed Makefile
Only those conflicted player addresses will be added to conflict_set,
which are located in a conflicted group. This will be done in
inc_conflict(...) and dec_conflict(...) which now takes the week and
group of the 2 players getting/leaving a conflict.

--- a/src/log4cpp.properties
+++ b/src/log4cpp.properties
@@ -1,26 +1,27 @@
-# log4cpp.properties
-
-log4cpp.rootCategory=ALL, rootAppender
-#log4cpp.category.sub1=DEBUG, A1, A2
-#log4cpp.category.sub1.sub2=DEBUG, A3
-
-log4cpp.appender.rootAppender=ConsoleAppender
-log4cpp.appender.rootAppender.layout=PatternLayout
-log4cpp.appender.rootAppender.layout.ConversionPattern=%d [%p] %m%n 
-
-#log4cpp.appender.A1=FileAppender
-#log4cpp.appender.A1.fileName=A1.log
-#log4cpp.appender.A1.layout=BasicLayout
-
-#log4cpp.appender.A2=FileAppender
-#log4cpp.appender.A2.threshold=WARN
-#log4cpp.appender.A2.fileName=A2.log
-#log4cpp.appender.A2.layout=PatternLayout
-#log4cpp.appender.A2.layout.ConversionPattern=%d [%p] %m%n 
-
-#log4cpp.appender.A3=RollingFileAppender
-#log4cpp.appender.A3.fileName=A3.log
-#log4cpp.appender.A3.maxFileSize=200
-#log4cpp.appender.A3.maxBackupIndex=1
-#log4cpp.appender.A3.layout=PatternLayout
-#log4cpp.appender.A3.layout.ConversionPattern=%d [%p] %m%n 
+#root category 
+log4cpp.rootCategory=DEBUG, console
+#console 
+log4cpp.appender.console=ConsoleAppender 
+log4cpp.appender.console.layout=PatternLayout 
+log4cpp.appender.console.layout.ConversionPattern=%d [%p] - %m%n
+#sample category 
+log4cpp.category.sample=DEBUG, sample
+#sample appender 
+log4cpp.appender.sample=FileAppender 
+log4cpp.appender.sample.fileName=sample.log 
+log4cpp.appender.sample.layout=PatternLayout 
+log4cpp.appender.sample.layout.ConversionPattern=%d [%p] - %m%n
+#sample.son category 
+log4cpp.category.sample.son=DEBUG, son
+#son appender 
+log4cpp.appender.son=FileAppender 
+log4cpp.appender.son.fileName=son.log 
+log4cpp.appender.son.layout=PatternLayout 
+log4cpp.appender.son.layout.ConversionPattern=%d [%p] - %m%n
+#sample.daughter category 
+log4cpp.category.sample.daughter=DEBUG, daughter
+#daughter appender 
+log4cpp.appender.daughter=FileAppender 
+log4cpp.appender.daughter.fileName=daughter.log 
+log4cpp.appender.daughter.layout=PatternLayout 
+log4cpp.appender.daughter.layout.ConversionPattern=%d [%p] - %m%n
